scripts npm run dev
npm run dev

--- a/src/input.css
+++ b/src/input.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 /* npx tailwindcss -i ./src/input.css -o ./src/output.css --watch */
+
+@layer base {
+  .clamp {
+    font-size: clamp(30px, 5vw, 85px);
+  }
+  section{
+    padding: 50px 80px; 
+  }
+}
+@layer components {
+  .item {
+    @apply hover:text-orange-600 text-2xl;
+  }
+}
